fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@
 }
 body{
     width: 100vw;
+    overflow-x: hidden;
 }
 
 /* Nav Header */
@@ -98,6 +99,7 @@ header{
 /* Home */
 
 .home {
+    margin-top: 50px;
     width: 100%;
     display: flex;
     flex-direction: row;
